Debug toggle by commenting out extra code
Co-authored-by: Peter Vang <vang_peter06@yahoo.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,25 +2,25 @@
   cursor: pointer;
   color: #0088cc;
 }
-#clickable1 {
+.clickable1 {
   cursor: pointer;
   color: #0088cc;
 }
-#clickable1:hover {
+.clickable1:hover {
   text-decoration: underline;
 }
-#clickable2 {
+.clickable2 {
   cursor: pointer;
   color: #0088cc;
 }
-#clickable2:hover {
+.clickable2:hover {
   text-decoration: underline;
 }
-#clickable3 {
+.clickable3 {
   cursor: pointer;
   color: #0088cc;
 }
-#clickable3:hover {
+.clickable3:hover {
   text-decoration: underline;
 }
 .clickable4 {
